[gd_scene load_steps=7 format=3 uid="uid://cj11p0ohild0e"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_e18a4"]
[ext_resource type="PackedScene" uid="uid://rsy7bk0k2rl8" path="res://scenes/player.tscn" id="2_yqufx"]
[ext_resource type="Texture2D" uid="uid://b7q2cunxp5kbf" path="res://icon.svg" id="3_7xao5"]
[ext_resource type="PackedScene" uid="uid://bmlebroifldma" path="res://scenes/jump_pad.tscn" id="4_2c8bx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xwv68"]
size = Vector2(988, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nt1tb"]
size = Vector2(1012, 20)

[node name="Level" type="Node2D"]
script = ExtResource("1_e18a4")

[node name="Player" parent="." instance=ExtResource("2_yqufx")]
position = Vector2(181, 132)

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(-179, 245)

[node name="Sprite2D" type="Sprite2D" parent="Ground"]
modulate = Color(0, 0, 0, 1)
scale = Vector2(7.71875, 0.15625)
texture = ExtResource("3_7xao5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource("RectangleShape2D_xwv68")

[node name="DeathZone" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2(0, 320)
shape = SubResource("RectangleShape2D_nt1tb")

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(250, 185)

[node name="JumpPad" parent="." instance=ExtResource("4_2c8bx")]
position = Vector2(113, 221)

[node name="JumpPad2" parent="." instance=ExtResource("4_2c8bx")]
position = Vector2(62, 221)
