[gd_scene load_steps=13 format=3 uid="uid://hkx7pw1y6xh"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_8pjgf"]
[ext_resource type="PackedScene" uid="uid://dtx7mrw5m5ora" path="res://scenes/background.tscn" id="1_j46d1"]
[ext_resource type="PackedScene" uid="uid://5wuvhra4j477" path="res://scenes/ui_layer.tscn" id="2_7t6km"]
[ext_resource type="PackedScene" uid="uid://ceotclmlp4onw" path="res://scenes/death_zone.tscn" id="2_rureg"]
[ext_resource type="Texture2D" uid="uid://digvobp4phvr1" path="res://assets/textures/bg/Purple.png" id="3_h87kj"]
[ext_resource type="PackedScene" uid="uid://dyvxh8pi6jdul" path="res://scenes/tile_map.tscn" id="3_t4lx0"]
[ext_resource type="PackedScene" uid="uid://dv4xo73dmgo11" path="res://scenes/start.tscn" id="4_2ctyl"]
[ext_resource type="PackedScene" uid="uid://c5pycwp3d0ox6" path="res://scenes/exit.tscn" id="5_ponub"]
[ext_resource type="PackedScene" uid="uid://rsy7bk0k2rl8" path="res://scenes/player.tscn" id="6_ayjaq"]
[ext_resource type="PackedScene" uid="uid://bmlebroifldma" path="res://scenes/jump_pad.tscn" id="7_orq75"]
[ext_resource type="PackedScene" uid="uid://b5suh3mdfkfcu" path="res://scenes/saw.tscn" id="8_6xaj0"]
[ext_resource type="PackedScene" uid="uid://br8ck8wlg4xyp" path="res://scenes/spike_ball.tscn" id="9_6hve7"]

[node name="level_3" type="Node2D"]
script = ExtResource("1_8pjgf")
level_time = 20

[node name="UILayer" parent="." instance=ExtResource("2_7t6km")]

[node name="Background" parent="." instance=ExtResource("1_j46d1")]
background_texture = ExtResource("3_h87kj")

[node name="DeathZone" parent="." instance=ExtResource("2_rureg")]

[node name="Start" parent="." instance=ExtResource("4_2ctyl")]
position = Vector2(30, 224)

[node name="Exit" parent="." instance=ExtResource("5_ponub")]
position = Vector2(52, 65)

[node name="Objects" type="Node2D" parent="."]

[node name="JumpPad" parent="Objects" instance=ExtResource("7_orq75")]
position = Vector2(824, 114)

[node name="JumpPad2" parent="Objects" instance=ExtResource("7_orq75")]
position = Vector2(309, 51)
jump_force = 350

[node name="Traps" type="Node2D" parent="."]

[node name="Saw" parent="Traps" instance=ExtResource("8_6xaj0")]
position = Vector2(165, 211)

[node name="Saw2" parent="Traps" instance=ExtResource("8_6xaj0")]
position = Vector2(246, 211)

[node name="SpikeBall" parent="Traps" instance=ExtResource("9_6hve7")]
position = Vector2(576, 210)

[node name="TileMap" parent="." instance=ExtResource("3_t4lx0")]
layer_0/tile_data = PackedInt32Array(983092, 524288, 1, 917556, 524288, 1, 1048627, 458752, 2, 983091, 458752, 1, 917555, 458752, 1, 1048626, 458752, 2, 983090, 458752, 1, 917554, 458752, 1, 1048625, 458752, 2, 983089, 458752, 1, 917553, 458752, 1, 1048624, 458752, 2, 983088, 458752, 1, 917552, 458752, 1, 1048623, 458752, 2, 983087, 458752, 1, 917551, 458752, 1, 1048622, 458752, 2, 983086, 458752, 1, 917550, 458752, 1, 1048621, 458752, 2, 983085, 458752, 1, 917549, 655360, 1, 1048620, 458752, 2, 983084, 458752, 1, 917548, 458752, 0, 1048619, 458752, 2, 983083, 458752, 1, 917547, 458752, 0, 1048618, 458752, 2, 983082, 458752, 1, 917546, 458752, 0, 1048617, 458752, 2, 983081, 458752, 1, 917545, 458752, 0, 1048616, 458752, 2, 983080, 458752, 1, 917544, 458752, 0, 1048615, 458752, 2, 983079, 458752, 1, 917543, 458752, 0, 1048614, 458752, 2, 983078, 458752, 1, 917542, 458752, 0, 1048613, 458752, 2, 983077, 458752, 1, 917541, 458752, 0, 1048612, 458752, 2, 983076, 458752, 1, 917540, 458752, 0, 1048611, 458752, 2, 983075, 458752, 1, 917539, 458752, 0, 1048610, 458752, 2, 983074, 458752, 1, 917538, 458752, 0, 1048609, 458752, 2, 983073, 458752, 1, 917537, 458752, 0, 1048608, 458752, 2, 983072, 458752, 1, 917536, 458752, 0, 1048607, 458752, 2, 983071, 458752, 1, 917535, 458752, 0, 1048606, 458752, 2, 983070, 458752, 1, 917534, 458752, 0, 1048605, 458752, 2, 983069, 458752, 1, 917533, 458752, 0, 1048604, 458752, 2, 983068, 458752, 1, 917532, 458752, 0, 1048603, 458752, 2, 983067, 458752, 1, 917531, 458752, 0, 1048602, 458752, 2, 983066, 458752, 1, 917530, 458752, 0, 1048601, 458752, 2, 983065, 458752, 1, 917529, 458752, 0, 1048600, 458752, 2, 983064, 458752, 1, 917528, 458752, 0, 1048599, 458752, 2, 983063, 458752, 1, 917527, 458752, 0, 1048598, 458752, 2, 983062, 458752, 1, 917526, 458752, 0, 1048597, 458752, 2, 983061, 458752, 1, 917525, 458752, 0, 1048596, 458752, 2, 983060, 458752, 1, 917524, 458752, 0, 1048595, 458752, 2, 983059, 458752, 1, 917523, 458752, 0, 1048594, 458752, 2, 983058, 458752, 1, 917522, 458752, 0, 1048593, 458752, 2, 983057, 458752, 1, 917521, 458752, 0, 1048592, 458752, 2, 983056, 458752, 1, 917520, 458752, 0, 1048591, 458752, 2, 983055, 458752, 1, 917519, 458752, 0, 1048590, 458752, 2, 983054, 458752, 1, 917518, 458752, 0, 1048589, 458752, 2, 983053, 458752, 1, 917517, 458752, 0, 1048588, 458752, 2, 983052, 458752, 1, 917516, 458752, 0, 1048587, 458752, 2, 983051, 458752, 1, 917515, 458752, 0, 1048586, 458752, 2, 983050, 458752, 1, 917514, 458752, 0, 1048585, 458752, 2, 983049, 458752, 1, 917513, 458752, 0, 1048584, 458752, 2, 983048, 458752, 1, 917512, 458752, 0, 1048583, 458752, 2, 983047, 458752, 1, 917511, 458752, 0, 1048582, 458752, 2, 983046, 458752, 1, 917510, 458752, 0, 1048581, 458752, 2, 983045, 458752, 1, 917509, 458752, 0, 1048580, 458752, 2, 983044, 458752, 1, 917508, 458752, 0, 1048579, 458752, 2, 983043, 458752, 1, 917507, 458752, 0, 1048578, 458752, 2, 983042, 458752, 1, 917506, 458752, 0, 1048577, 458752, 2, 983041, 458752, 1, 917505, 458752, 0, 1048576, 393216, 2, 983040, 393216, 1, 917504, 393216, 0, 852020, 524288, 1, 786484, 524288, 1, 720948, 524288, 1, 852019, 458752, 1, 786483, 458752, 1, 720947, 458752, 1, 852018, 458752, 1, 786482, 458752, 1, 720946, 655360, 1, 852017, 458752, 1, 786481, 458752, 1, 720945, 458752, 0, 852016, 458752, 1, 786480, 458752, 1, 720944, 458752, 0, 852015, 458752, 1, 786479, 458752, 1, 720943, 458752, 0, 852014, 458752, 1, 786478, 458752, 1, 720942, 458752, 0, 852013, 393216, 1, 786477, 393216, 1, 720941, 393216, 0, 655412, 524288, 1, 589876, 524288, 1, 524340, 524288, 0, 655411, 458752, 1, 589875, 458752, 1, 524339, 458752, 0, 393258, 524288, 2, 327722, 524288, 1, 262186, 524288, 0, 393257, 458752, 2, 327721, 458752, 1, 262185, 458752, 0, 393256, 458752, 2, 327720, 458752, 1, 262184, 458752, 0, 393255, 458752, 2, 327719, 458752, 1, 262183, 458752, 0, 393254, 458752, 2, 327718, 458752, 1, 262182, 458752, 0, 393253, 458752, 2, 327717, 458752, 1, 262181, 458752, 0, 393252, 393216, 2, 327716, 393216, 1, 262180, 393216, 0, 393242, 524288, 2, 327706, 524288, 1, 262170, 524288, 0, 393241, 458752, 2, 327705, 458752, 1, 262169, 458752, 0, 393240, 458752, 2, 327704, 458752, 1, 262168, 458752, 0, 393239, 458752, 2, 327703, 458752, 1, 262167, 458752, 0, 393238, 458752, 2, 327702, 458752, 1, 262166, 458752, 0, 393237, 458752, 2, 327701, 458752, 1, 262165, 458752, 0, 393236, 458752, 2, 327700, 458752, 1, 262164, 458752, 0, 393235, 458752, 2, 327699, 458752, 1, 262163, 458752, 0, 393234, 393216, 2, 327698, 393216, 1, 262162, 393216, 0, 393223, 524288, 2, 327687, 524288, 1, 262151, 524288, 0, 393222, 458752, 2, 327686, 458752, 1, 262150, 458752, 0, 393221, 458752, 2, 327685, 458752, 1, 262149, 458752, 0, 393220, 458752, 2, 327684, 458752, 1, 262148, 458752, 0, 393219, 458752, 2, 327683, 458752, 1, 262147, 458752, 0, 393218, 458752, 2, 327682, 458752, 1, 262146, 458752, 0, 393217, 458752, 2, 327681, 458752, 1, 262145, 458752, 0, 393216, 393216, 2, 327680, 393216, 1, 262144, 393216, 0, 262174, 1114112, 1, 262175, 1179648, 1, 262176, 1245184, 1, 1048628, 524288, 2, 655410, 393216, 1, 589874, 393216, 1, 524338, 393216, 0)

[node name="Player" parent="." instance=ExtResource("6_ayjaq")]
position = Vector2(40, 189)
